[package]
name = "sshmysqldump"
version = "0.1.0"
edition = "2021"
keywords = ["CLI", "project", "management", "SQL", "database", "export"]
categories = ["command-line-utilities"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive", "cargo"] }
mysql = "23.0.1"
rpassword = "7.2.0"
ssh = "0.1.4"
